syntax = "proto3";

package rivet.backend.pkg.chat_message.list;

import "proto/common.proto";
import "proto/backend/chat.proto";

message Request {
	reserved 3;

	enum QueryDirection {
		BEFORE = 0;
		AFTER = 1;
		BEFORE_AND_AFTER = 2;
	}

	rivet.common.Uuid thread_id = 1;
	int64 ts = 2;
	uint32 count = 4;
	QueryDirection query_direction = 5;
}

message Response {
	repeated rivet.backend.chat.Message messages = 1;
}
